--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}  
+        token: ${{ secrets.TOKEN }}  
     
     - name: Set up Python
       uses: actions/setup-python@v2
