--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,38 +1,34 @@
 name: Stock Screening
 on:
   schedule:
-    - cron: '0 21 * * 0-4'
-  workflow_dispatch:
-
+    - cron: '0 21 * * 0-4'  # 每個工作日早上 5:00 (UTC+8) 運行
+  workflow_dispatch:  # 允許手動觸發
 jobs:
   screen:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.TOKEN }}  
-
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install certifi
-
+        
     - name: Run screening script
       env:
         APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
         RECIVER_EMAIL: ${{ secrets.RECIVER_EMAIL }}
         SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
-      run: |
-        export REQUESTS_CA_BUNDLE=$(python -m certifi)
-        python 動能選股.py
-
+      run: python 動能選股.py
+    
     - name: Commit and push changes
       run: |
         git config --local user.email "action@github.com"
