--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
-    
+         python-version: '3.11'  
+         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
